[FIX] Fixed Report traceback
(cherry picked from commit a4cee6ff69575740b8ac8dc038382a3f9c2875d3)

--- a/bista_purchase/report/purchase.xml
+++ b/bista_purchase/report/purchase.xml
@@ -39,7 +39,7 @@
                 <!-- <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']"> -->
                 <t t-if="xmlid == 'purchase.report_purchaseorder' and o.need_by_date">
                     <strong>Order Need By Date:</strong>
-                    <t t-esc="context_timestamp(o.need_by_date).strftime('%m/%d/%Y, %H:%M:%S')"/>
+                    <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
                     <br/>
                 </t>
                 <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
