--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -106,7 +106,7 @@
                         <t t-if="xmlid == 'purchase.report_purchaseorder' and o.need_by_date" >
                             <div class="text-danger">
                                 <strong >Order Arrive By Date:</strong>
-                                <t t-esc="context_timestamp(o.need_by_date).strftime('%m/%d/%Y, %H:%M:%S')"/>
+                                <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
                                 <br/>
                             </div>
                         </t>
