[IMP] Bug #18013 - solved issue of multishipment and stock qty Icons overlapping
(cherry picked from commit b030fe387430bd5a54fe0fa4b001462e92ca0086)

--- a/bista_sale_multi_ship/views/sale_order_view.xml
+++ b/bista_sale_multi_ship/views/sale_order_view.xml
@@ -35,14 +35,9 @@
                     <attribute name="sum">Total</attribute>
                 </xpath>
                 <xpath expr="//page/field[@name='order_line']/tree/field[@name='product_uom']" position="before">
-                    <field name="sale_split_shipment" invisible="1"/>
                     <button name="open_sale_multi_ship_qty_wizard"
-                            type="object"
-                            icon="fa-truck"
-                            class="text-primary"
-                            style="float:right"
-                            attrs="{'invisible': ['|',('product_type','=','service'), ('sale_split_shipment', '=', False)]}"
-                            title="Show Shipment Plan"/>
+                        type="object" icon="fa-truck" class="text-primary" title="Show Shipment Plan"
+                        attrs="{'invisible': ['|', ('product_type', '=', 'service'), ('parent.split_shipment', '=', False)]}" />
                     <field name="remain_so_qty" optional="hide" readonly="1" force_save="1"/>
                 </xpath>
                  <xpath expr="//page/field[@name='order_line']/tree/field[@name='product_uom']" position="after">
