--- a/bista_purchase/views/purchase_tracking_views.xml
+++ b/bista_purchase/views/purchase_tracking_views.xml
@@ -30,10 +30,11 @@
                     </group>
                     <notebook>
                         <page name="trackings" string="Trackings">
-                            <field name="tracking_ref_ids" nolabel="1" attrs="{'readonly': [('is_read_only', '=', True)]}">
+                            <field name="tracking_ref_ids" attrs="{'readonly': [('is_read_only', '=', True)]}">
                                 <tree editable="bottom">
                                     <field name="name" required="1" />
-                                    <field name="tracking_url" widget="url" required="1" attrs="{'readonly': [('parent.delivery_type', 'in', ('ups'))]}" force_save="1" />
+                                    <field name="tracking_url" widget="url" required="1" force_save="1"
+                                        attrs="{'readonly': [('parent.delivery_type', 'in', ('ups', 'usps'))]}" />
                                 </tree>
                             </field>
                         </page>
