[FIX]Fixed the Bug #19457 - related to update customer preview portal changes.
(cherry picked from commit 7b6c0dd6756bc5e2ab03cb01b672771870f6c7ae)

--- a/bista_avatax_exemption/views/res_company_view.xml
+++ b/bista_avatax_exemption/views/res_company_view.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="account_avatax.res_partner_form_inherit" />
         <field name="arch" type="xml">
             <field name="avalara_exemption_id" position="attributes">
-                <attribute name="attrs">{'invisible': [('parent_id', '!=', False)]}</attribute>
+                <attribute name="attrs"></attribute>
             </field>
         </field>
     </record>
