--- a/bigcommerce_odoo_integration/views/sale_order.xml
+++ b/bigcommerce_odoo_integration/views/sale_order.xml
@@ -16,18 +16,18 @@
                             attrs="{'invisible': [('big_commerce_order_id','=',False)]}" groups="bigcommerce_odoo_integration.group_hide_export_button"/>
                 </header>
                 <xpath expr="//field[@name='payment_term_id']" position="after">
-                    <field name="bigcommerce_store_id"/>
+                    <field name="bigcommerce_store_id" groups="bigcommerce_odoo_integration.group_hide_export_button"/>
                 </xpath>
                 <xpath expr="//page[last()]" position="after">
                     <page name="bigcommerce_info" string="BigCommerce Info">
                         <group>
                             <group>
-                                <field name="big_commerce_order_id"/>
-                                <field name="bigcommerce_shipment_order_status"/>
+                                <field name="big_commerce_order_id" readonly="1"/>
+                                <field name="bigcommerce_shipment_order_status" readonly="1"/>
                             </group>
                             <group>
-                                <field name="payment_method"/>
-                                <field name="payment_status"/>
+                                <field name="payment_method" readonly="1"/>
+                                <field name="payment_status" readonly="1"/>
                             </group>
                         </group>
                     </page>
