--- a/bista_sale_multi_ship/views/sale_order_view.xml
+++ b/bista_sale_multi_ship/views/sale_order_view.xml
@@ -75,11 +75,11 @@
 
                         <button name="open_sale_multi_ship_wizard" type="object"
                                 icon="fa-truck" string="Import Shipping Data" class="btn-primary" style="float:right" invisible="1" title="Import Shipping Data"/>
-                        <field name="sale_multi_ship_qty_lines" context="{'multi_ship': True}">
+                        <field name="sale_multi_ship_qty_lines" context="{'multi_ship': True, 'partner_shipping_id': partner_shipping_id}">
                             <tree context="{'multi_ship': True}" decoration-danger="partner_state =='error' and state=='draft'" decoration-success="partner_state =='verified' and state=='draft'" decoration-muted="state == 'cancel' or state == 'short_close'" decoration-warning="qty_delivered and product_qty != qty_delivered" editable="top">
                                 <field name="id" invisible="1"/>
                                 <!-- '|', ('id', 'child_of', parent.partner_id), remove this domain to show only customer name in shipping because as discussed in client meeting they will create different sale order if they want to change shipping address for tax calculation -->
-                                <field name="partner_id" context="{'form_view_ref': 'bista_sale_multi_ship.res_partner_custom_multi_shipment_form_view', 'tree_view_ref': 'bista_sale_multi_ship.res_partner_custom_multi_shipment_tree_view', 'default_is_multi_ship': True, 'default_parent_id': parent.partner_id, 'order_id': parent.id, 'shipment_contact': True}" domain="[('id', '=', parent.partner_id)]" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}" options="{'always_reload':1}"/>
+                                <field name="partner_id" context="{'form_view_ref': 'bista_sale_multi_ship.res_partner_custom_multi_shipment_form_view', 'tree_view_ref': 'bista_sale_multi_ship.res_partner_custom_multi_shipment_tree_view', 'default_is_multi_ship': True, 'default_parent_id': parent.partner_id, 'order_id': parent.id, 'shipment_contact': True}" domain="[('id', '=', parent.partner_shipping_id)]" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}" options="{'always_reload':1}" default="parent.partner_shipping_id"/>
                                 <field name="so_line_id" options="{'no_create_edit': True, 'no_quick_create': True}" optional="show" context="{'so_lines': parent.so_lines, 'multi_ship': True}" domain="[('order_id', '=', parent.id)]" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                                 <field name="shipping_date" optional="show" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                                 <field name="product_id" invisible="1"/>
@@ -112,7 +112,7 @@
                                 <field name="order_id" invisible="1"/>
                                 <field name="delivery_method_id"/>
                                 <field name="delivery_charges" readonly="1"/>
-                                <button name="get_shipping_charge" type="object" class="fa fa-fw o_button_icon fa-truck" Title="Get Shipping Cost" />
+                                <button name="get_shipping_charge" type="object" class="fa fa-fw o_button_icon fa-truck" title="Get Shipping Cost" />
                                 <button name="cancel_shipment"
                                     type="object"
                                     icon="fa-close"
