--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -98,11 +98,6 @@
                             <t t-esc="o.name"/>
                             <br/>
                         </t>
-                        <!-- <t t-if="o.state in ['draft','sent']">
-                            <strong>Purchase Order Date:</strong>
-                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
-                            <br/>
-                        </t> -->
                         <t t-if="xmlid == 'purchase.report_purchaseorder' and o.need_by_date" >
                             <div class="text-danger">
                                 <strong >Order Arrive By Date:</strong>
@@ -115,7 +110,6 @@
                             <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
                             <br/>
                         </t>
-
                         <strong>BookPal Account # :</strong>
                         <t t-esc="428475"/>
                         <br/>
@@ -124,13 +118,13 @@
                             <t t-esc="o.payment_term_id.name"/>
                             <br/>
                         </t>
-                        <strong>Shipping Method :</strong>
-                        <span>Free Delivery Method</span>
-                        <br/>
                         <t t-if="o.shipping_instructions">
                             <strong>Shipping Instructions :</strong>
-                            <t t-esc="o.shipping_instructions.name"/>
-                            <br/>
+                            <span t-field="o.shipping_instructions" /><br/>
+                        </t>
+                        <t t-if="o.rush_status_id">
+                            <strong>Shipping Method :</strong>
+                            <span t-field="o.rush_status_id" /><br/>
                         </t>
                         <strong>Salesperson:</strong>
                         <t t-esc="o.user_id.name"/>
