--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -122,17 +122,16 @@
                 </page>
                 <page name="ops_project_owner" string="Steps and Nuances">
                     <group>
-                        <field name="shipping_instructions" class="oe_inline"/>
+                        <group>
+                            <field name="shipping_instructions" />
+                            <field name="rush_status_id" />
+                        </group>
                     </group>
                     <group>
                         <group name="ops_project_owner" string="Ops Project Owner">
                             <field name="ordered_by"/>
                             <field name="ops_project_owner_id"/>
-                            
                         </group>
-                        <!--                        <group name="approved_payment" string="Approved Payment">-->
-                        <!--                            <field name="billing_notes" style="max-height: 25px;"/>-->
-                        <!--                        </group>-->
                         <group name="confirm_supplier" string="Confirm Supplier">
                             <!--                            <field name="cc_email"/>-->
                             <field name="supplier_nuances"/>
@@ -160,7 +159,6 @@
                     </group>
                     <group name="shipping_method_instructions" string="Shipping Method and Instructions">
                         <group>
-                            <field name="rush_status_id"/>
                             <field name="order_shipping_desc" />
                             <field name="default_supplier_shipping" />
                             <field name="freight_charges" />
