--- a/bista_bigcommerce_extend/views/sale_order_view.xml
+++ b/bista_bigcommerce_extend/views/sale_order_view.xml
@@ -28,7 +28,7 @@
                 <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">
                     <field name="product_format" optional="show" />
                 </xpath>
-                <xpath expr="//field[@name='sale_multi_ship_qty_lines']/tree/field[@name='so_line_id']" position="after">
+                <xpath expr="//field[@name='sale_multi_ship_qty_lines']/tree//field[@name='so_line_id']" position="after">
                     <field name="product_format" optional="show" />
                 </xpath>
             </field>
