[IMP] Feature #19436 - solved issue of datetime in PO reports
(cherry picked from commit c7ab380731dbf25fa19eb024130a58a5814fb587)

--- a/bista_purchase/report/purchase.xml
+++ b/bista_purchase/report/purchase.xml
@@ -44,7 +44,7 @@
                 </t>
                 <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
                     <strong>Purchase Order Date:</strong>
-                    <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
+                    <span t-field="o.date_order" />
                     <br/>
                 </t>
 
