--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -56,15 +56,14 @@
                     <h3 t-if="o.state == 'reject'">Rejected Purchase Order/Approved Order</h3>
                     <h4>
                         <strong>
-                            <t t-esc="o.name"/>
+                            <span t-field="o.name"/>
                         </strong>
                     </h4>
                     <strong t-if="o.state in ['purchase','done']">Date:
-                        <!-- <t t-esc="o.date_approve" t-options="{'widget': 'datetime'}"/> -->
-                        <t t-esc="context_timestamp(o.date_approve).strftime('%m/%d/%Y, %H:%M:%S')"/>
+                        <span t-field="o.date_approve" />
                     </strong>
                     <strong t-if="o.state not in ['purchase','done']">Date:
-                        <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
+                        <span t-field="o.date_order" />
                     </strong>
                 </t>
                 <t t-if="o.dest_address_id">
@@ -98,16 +97,16 @@
                             <t t-esc="o.name"/>
                             <br/>
                         </t>
-                        <t t-if="xmlid == 'purchase.report_purchaseorder' and o.need_by_date" >
+                        <t t-if="xmlid == 'purchase.report_purchaseorder' and o.need_by_date">
                             <div class="text-danger">
                                 <strong >Order Arrive By Date:</strong>
-                                <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
+                                <span t-field="o.need_by_date" t-options='{"widget": "date"}' />
                                 <br/>
                             </div>
                         </t>
                         <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
                             <strong>Purchase Order Date:</strong>
-                            <t t-esc="context_timestamp(o.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
+                            <span t-field="o.date_order" />
                             <br/>
                         </t>
                         <strong>BookPal Account # :</strong>
