[IMP] Feature #19550 - Added next folloup date and notes on PO tracking update and also display on PO status report
(cherry picked from commit 00d1aa5afdb337f4d0a7515a18db0b9ff316eca4)

--- a/bista_orders_report/views/purchase_order_line_view.xml
+++ b/bista_orders_report/views/purchase_order_line_view.xml
@@ -15,10 +15,10 @@
                 <field name="product_id"/>
                 <field name="price_unit" string="Unit Price" optional="show" widget="monetary"/>
                 <field name="currency_id" optional="hide"/>
-                <field name="uom_id" optional="show"/>
+                <field name="uom_id" string="Unit of Measure" optional="show"/>
                 <field name="origin" optional="show"/>
                 <field name="product_uom_qty" string="Order Qty" optional="show"/>
-                <field name="qty_received_uom" optional="show"/>
+                <field name="qty_received_uom" string="Received Qty" optional="show"/>
                 <field name="qty_remain_receive" optional="show"/>
                 <field name="qty_shortclose" optional="show"/>
                 <field name="qty_received_value" optional="show" widget="monetary"/>
