--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <record id="purchase_order_line_tree_view_bista" model="ir.ui.view">
+        <field name="name">purchase.order.line.form.bista</field>
+        <field name="model">purchase.order.line</field>
+        <field name="inherit_id" ref="bista_orders_report.purchase_order_line_tree_view"/>
+        <field name="arch" type="xml">
+            <field name="price_total" position="after">
+                <field name="status_id" optional="show" />
+                <field name="next_followup_date" optional="show" />
+                <field name="note" optional="show" />
+            </field>
+        </field>
+    </record>
+
     <record id="purchase_order_form_inherit_added_custom_field" model="ir.ui.view">
         <field name="name">purchase.order.form.inherit.added.custom.fields</field>
         <field name="model">purchase.order</field>
